# brasse

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: main.yml
cmd/: list.go  root.go
pkg/brasse/: caskroom.go  cellar.go
src/: casks.rs  formulae.rs  homebrew.rs  lib.rs  main.rs
src/cmd/: list.rs
src/util/: filesystem.rs  mod.rs  output.rs
