[package]
name = "brasse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
term_grid = "0.1.7"
terminal_size = "0.2.3"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
