[package]
name = "brasse"
version = "0.2.1"
authors = [
    "Nikita Karamov <me@kytta.dev>"
]
edition = "2021"
description = "Homebrew, but better."
repository = "https://github.com/kytta/brasse"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["cargo", "derive"] }
term_grid = "0.1.7"
terminal_size = "0.2.3"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
strip = "symbols"
